--- a/index.html
+++ b/index.html
@@ -7,46 +7,63 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
 <body class="container">
 	<div class="row" id="title">
 		Train Times!
 	</div>
 	<br>
-	<div class="row" id="trainTimes">
-		<h2>Current Train Schedule</h2>
-	<div id = "trainTimesInside">
-			
-	</div>
-	</div>
+	<h2 class="row" id="currentTime"></h2>
 	<br>
-	<div class="row" id="addTrainBox">
-		<form id="trainParameters">
-			<h2>Add A Train!</h2>
-			<label>Train Name:</label>
-			<br>
-			<input type="text" class="form-control" id="trainName">
-			<br>
-			<label>Destination:</label>
-			<br>
-			<input type="text" class="form-control" id="destination">
-			<br>
-			<label>First Train Time (HH:mm - military time):</label>
-			<br>
-			<input type="text" class="form-control" id="firstTime">
-			<br>
-			<label>Frequency (in minutes):</label>
-			<br>
-			<input type="text" class="form-control" id="frequency">
-			<br>
-			<button type="button" class="btn btn-primary" id = "submitButton">
-				<span class="glyphicon glyphicon-search"></span>  Submit
-			</button>
-			<button type="button" class="btn btn-primary" id = "clearButton">
-				<span class="glyphicon glyphicon-remove-circle"></span>  Clear Results
-			</button>
-		</form>
+
+	<div class="panel panel-primary">
+		<div class = "panel-heading">
+			<h2 class="panel-title"><strong>Current Train Schedule</strong></h2>
+		</div>
+		<div>
+			<table class="table table-hover" id="trainTable">
+				<thead>
+					<tr>
+						<th>Train Name</th>
+						<th>Destination</th>
+						<th>Frequency (min)</th>
+						<th>Next Arrival</th>
+						<th>Minutes Away</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
 	</div>
+
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<h2 class="panel-title"><strong>Add a Train!</strong></h2>
+		</div>
+		<div class="panel-body">
+			<form>
+				<div class="form-group">
+					<label for="train-name-input">Train Name:</label>
+					<input class="form-control" id="train-name-input" type="text">
+				</div>
+				<div class="form-group">
+					<label for="destination-input">Destination:</label>
+					<input class="form-control" id="destination-input" type="text">
+				</div>
+				<div class="form-group">
+					<label for="first-time-input">First Train Time (HH:mm - military time):</label>
+					<input class="form-control" id="first-time-input" type="text">
+				</div>
+				<div class="form-group">
+					<label for="frequency-input">Frequency (in minutes):</label>
+					<input class="form-control" id="frequency-input" type="text">
+				</div>
+				<button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
+			</form>
+			</div>
+		</div>
 	<br>
 </body>
 
