--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
 <body class="container">
-	<div class="row" id="title">
+	<div class="jumbotron" id="title">
 		Train Times!
 	</div>
-	<br>
 	<h2 class="row" id="currentTime"></h2>
 	<br>
 
@@ -60,14 +59,13 @@
 					<label for="frequency-input">Frequency (in minutes):</label>
 					<input class="form-control" id="frequency-input" type="text">
 				</div>
-				<button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
+				<button class="btn btn-primary" id="add-train-button" type="submit">Submit</button>
 			</form>
 			</div>
 		</div>
 	<br>
 </body>
 
-<br>
 <footer>
 	<h4>Copyright @BobbyFraz 2017</h4>
 </footer>
