--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 			<form>
 				<div class="form-group">
 					<label for="train-name-input">Train Name:</label>
-					<input class="form-control" id="train-name-input" type="text">
+					<input class="form-control" placeholder="Enter Train Name" id="train-name-input" type="text">
 				</div>
 				<div class="form-group">
 					<label for="destination-input">Destination:</label>
-					<input class="form-control" id="destination-input" type="text">
+					<input class="form-control" placeholder="Enter Destination" id="destination-input" type="text">
 				</div>
 				<div class="form-group">
 					<label for="first-time-input">First Train Time (HH:mm - military time):</label>
-					<input class="form-control" id="first-time-input" type="text">
+					<input class="form-control" placeholder="Enter First Train Time" id="first-time-input" type="text">
 				</div>
 				<div class="form-group">
-					<label for="frequency-input">Frequency (in minutes):</label>
-					<input class="form-control" id="frequency-input" type="text">
+					<label for="frequency-input">Train Frequency (in minutes):</label>
+					<input class="form-control" placeholder="Enter Train Frequency" id="frequency-input" type="text">
 				</div>
 				<button class="btn btn-primary" id="add-train-button" type="submit">Submit</button>
 			</form>
