--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
 	<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
+	<!-- browser-sync start --server --directory --files "**/*" -->
 </head>
 <body class="container">
 	<div class="jumbotron" id="title">
